- Revert back to original behavior of Cassandra start instead of customized script.
- CRON can now be started on the postStart on yaml.

--- a/DockerFile
+++ b/DockerFile
@@ -66,8 +66,7 @@ RUN sed -ri 's/^(JVM_PATCH_VERSION)=.*/\1=25/' /etc/cassandra/cassandra-env.sh
 ENV CASSANDRA_CONFIG /etc/cassandra
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
-COPY cassandra-aws-backup.sh /cassandra-aws-backup.sh
-# ENTRYPOINT ["/docker-entrypoint.sh"]
+ENTRYPOINT ["/docker-entrypoint.sh"]
 
 RUN mkdir -p /var/lib/cassandra "$CASSANDRA_CONFIG" \
 	&& chown -R cassandra:cassandra /var/lib/cassandra "$CASSANDRA_CONFIG" \
@@ -83,8 +82,6 @@ EXPOSE 7000 7001 7199 9042 9160
 
 COPY ready-probe.sh ready-probe.sh
 COPY cassandra.yaml /etc/cassandra/cassandra.yaml
-COPY start_with_cron.sh start_with_cron.sh
+COPY cassandra-aws-backup.sh /cassandra-aws-backup.sh
 
-CMD ./start_with_cron.sh
-
-#CMD ["cassandra", "-f"]
+CMD ["cassandra", "-f"]
